# pyhiew

./: .gitignore  CMakeLists.txt  README.md  prep-cmake.bat
.temp/: ShellExt.bat
RELEASES/hiew_sdks/0.46/: HiewGate.c  hem.h  hem_en.txt  sample1.c  sample1.vcproj
RELEASES/hiew_sdks/0.53/: Hem.dsw  sample1.c  sample2.c  sample3.c
RELEASES/hiew_sdks/0.53/Compliled/: Sample1.hem  Sample2.hem  Sample3.hem
RELEASES/hiew_sdks/0.53/Sample1/: Sample1.dsp
RELEASES/hiew_sdks/0.53/Sample2/: Sample2.dsp
RELEASES/hiew_sdks/0.53/Sample3/: Sample3.dsp
hiewsdk/: hem.txt  hem_en.txt
src/: Pyhiew.vcxproj  pyhiew.cpp  pyhiew.rc  pyhiew.sln  pyhiew.vcxproj.filters  pyhiewdoc.bat  pyhiewdoc.cfg  pyhiewdoc.py  util.cpp  util.h
